@@ -77,7 +77,8 @@ Trunk (unreleased changes)
    HADOOP-2396 NPE in HMaster.cancelLease
    HADOOP-2397 The only time that a meta scanner should try to recover a log is
                when the master is starting
-
+   HADOOP-2417 Fix critical shutdown problem introduced by HADOOP-2338
+   
   IMPROVEMENTS
    HADOOP-2401 Add convenience put method that takes writable
                (Johan Oskarsson via Stack)
